Fixed horizontal scroll bar

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -31,6 +31,7 @@ h1 {
 
 ::-webkit-scrollbar {
     width: 2px;
+    height: 2px;
 }
 ::-webkit-scrollbar-track {
     background: #151c3a;
